--- a/aboutme.html
+++ b/aboutme.html
@@ -30,7 +30,7 @@
         <p>Schaken</p>
         <p>Rubik's Cube oplossen</p>
 
-        <video controls src="test.mp4"></video>
+        <video controls src="COD.mp4"></video>
       </div>
       <div class="familie">
         <h3> Familie</h3>
