--- a/aboutme.html
+++ b/aboutme.html
@@ -53,7 +53,7 @@
               </ul>
               <div class="media-player">
                 <video controls class="media-video">
-                  <source src="assets/video/test.mp4" type="video/mp4">
+                  <source src="assets/video/COD.mp4" type="video/mp4">
                   Je browser ondersteunt geen video.
                 </video>
               </div>
