--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
 
     <div class="knoppen">
-      <a href="form.html" class="form">Formulier</a>
+      <a href="form.html" class="form">Formulier invullen</a>
       <a class="form" type="button" id="verlaat">Verlaat de site</a>
     </div>
     
