removed W3C-validator errors

--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
 
     <div class="knoppen">
       <a href="form.html" class="form">Formulier invullen</a>
-      <a class="form" type="button" id="verlaat">Verlaat de site</a>
+      <a href="" class="form" type="button" id="verlaat">Verlaat de site</a>
+      <!-- <button type="button" class="form" id="verlaat">Verlaat de site</button> -->
+
     </div>
     
   </div>
